add json response + swagger improvments
