# internal/modules/department/department/routes/routes.go
@@ -16,10 +16,10 @@ func Routes(router *gin.Engine) {
 	authGroup := router.Group("/api/v1")
 
 	authGroup.GET("/department", DepartmentController.Search)
+	authGroup.GET("/department/:id", DepartmentController.Show)
 
 	authGroup.Use(middlewares.IsAuthJwt())
 	{
-		authGroup.GET("/department/:id", DepartmentController.Show)
 
 		authGroup.POST("/department", DepartmentController.Store)
 		authGroup.PUT("/department/:id", DepartmentController.Update)
